--- a/Form.html
+++ b/Form.html
@@ -9,10 +9,19 @@
 <body>  
     <header class="header-content header">
         <div class="logo-content">
-            <img src="../EmployeePayrollApp/assests/" alt="">
+            <img src="../EmployeePayrollApp/assests/images/logo.png" alt="">
             <div>
 							<span class="emp-text">EMPLOYEE</span><br>
 							<span class="emp-text emp-payroll">PAYROLL</span>
 						</div>
 				</div>
 	  </header>
+      <div class="form-content">
+        <form class="form" action="#" onreset="resetForm()" onsubmit="save()">
+          <div class="form-head">Employee Payroll Form</div>
+            <div class="row-content">
+                <label class="label text" for="name">Name</label> 
+                  <input class="input" type="text" id="name" name="name" 
+                            placeholder="Your Name..." required>
+                            <error-output class="text-error" for="text"></error-output>
+            </div>
